deployment/ingress/eks/sway-playground-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${k8s_namespace}-forc-pub-ingress
  namespace: ${k8s_namespace}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: ${forc_pub_ingress_dns}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forc-pub-service
                port:
                  number: ${forc_pub_ingress_http_port}
  tls:
    - hosts:
        - ${forc_pub_ingress_dns}
      secretName: ${forc_pub_dns_secret}
